// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.resourceusage.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/resourceusage/v1;resourceusagev1";

// DevicesUsage holds aggregated information about trusted device usage.
message DevicesUsage {
  // Devices usage limit.
  // Always zero if the account usage type is ACCOUNT_USAGE_TYPE_UNLIMITED.
  int32 devices_usage_limit = 1;

  // Devices in use.
  // May be greater than [devices_usage_limit] in some cases.
  // Always zero if the account usage type is ACCOUNT_USAGE_TYPE_UNLIMITED.
  int32 devices_in_use = 2;
}
